# unix-programming

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
include/: exp4.h  exp5.h  exp6.h  mycp.h  myinstructor.h  myls.h
src/: exp4.c  exp5.c  exp6.c  mycp.c  mycp.cpp  myinstructor.c  myls.c
